--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "versao_siga",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./src/index.js",
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
