--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "versao_siga",
   "version": "1.0.0",
-  "main": "./src/index.js",
+  "main": "index.js",
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -11,6 +11,7 @@
     "sqlite3": "^5.0.0"
   },
   "scripts": {
+    "start" : "node index.js"
     "m": "npx knex migrate:latest",
     "r": "knex migrate:rollback --all"
   }
